--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
         "livewire/livewire": "^3.0",
+        "spatie/laravel-honeypot": "^4.5",
         "spatie/laravel-ray": "^1.33"
     },
     "require-dev": {
