--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,10 @@
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
-        "livewire/livewire": "^3.0",
+        "livewire/flux": "^1.0",
+        "livewire/flux-pro": "^1.0",
+        "livewire/livewire": "^3.5",
+        "livewire/volt": "^1.6",
         "spatie/laravel-honeypot": "^4.5",
         "spatie/laravel-ray": "^1.33"
     },
@@ -66,5 +69,11 @@
         }
     },
     "minimum-stability": "stable",
-    "prefer-stable": true
+    "prefer-stable": true,
+    "repositories": {
+        "flux-pro": {
+            "type": "composer",
+            "url": "https://composer.fluxui.dev"
+        }
+    }
 }
