--- a/package.json
+++ b/package.json
@@ -18,10 +18,13 @@
         "laravel-vite-plugin": "^0.8.0",
         "postcss": "^8.4.31",
         "tailwindcss": "^3.4",
-        "vite": "^4.5.2"
+        "vite": "^4.5.2",
+        "vue-axios": "^3.4.1"
     },
     "dependencies": {
         "alpinejs": "^3.13.0",
-        "gsap": "^3.12.5"
+        "gsap": "^3.12.5",
+        "@vitejs/plugin-vue": "^4.6.2",
+        "vue": "^3.2.36"
     }
 }
