--- a/package.json
+++ b/package.json
@@ -12,12 +12,13 @@
         "build": "vite build"
     },
     "devDependencies": {
-        "@tailwindcss/forms": "^0.5.6",
-        "autoprefixer": "^10.4.15",
+        "@tailwindcss/forms": "^0.5.2",
+        "alpinejs": "^3.4.2",
+        "autoprefixer": "^10.4.2",
         "axios": "^1.6.7",
         "laravel-vite-plugin": "^0.8.0",
         "postcss": "^8.4.31",
-        "tailwindcss": "^3.4",
+        "tailwindcss": "^3.1.0",
         "vite": "^4.5.2",
         "vue-axios": "^3.4.1"
     },
